--- a/compose.yaml
+++ b/compose.yaml
@@ -2,10 +2,7 @@ version: '3'
 
 services:
   web:
-    image: m4vdoshin/taxi_ais:test
-    volumes:
-      - media:/taxi_ais/media
-      # - /home/logs:/taxi_ais/debug.log
+    image: m4vdoshin/authorizationlearning
     command:
       python manage.py runserver 0.0.0.0:8000
     ports:
